Adding the MoivePageFunction

--- a/index.html
+++ b/index.html
@@ -21,8 +21,40 @@
               <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
+              <!-- COLUMNS -->
+              <div class="dropdown">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                 MOVIES
+                </button>
+                <div class="dropdown-menu dropdown-multicol2" aria-labelledby="dropdownMenuButton">
+                  <div class="dropdown-col">
+                    <a class="dropdown-item" href="#">Action</a>
+                    <a class="dropdown-item" href="#">Adventure</a>
+                    <a class="dropdown-item" href="#">Animation</a>
+                    <a class="dropdown-item" href="#">History</a>
+                    <a class="dropdown-item" href="#">Horror</a>
+                    <a class="dropdown-item" href="#">TV Movie</a>
+                  </div>
+                  <div class="dropdown-col">
+                    <a class="dropdown-item" href="#">Comedy</a>
+                    <a class="dropdown-item" href="#">Crime</a>
+                    <a class="dropdown-item" href="#">Documentary</a>
+                    <a class="dropdown-item" href="#">Music</a>
+                    <a class="dropdown-item" href="#">Mystery</a>
+                    <a class="dropdown-item" href="#">Thriller</a>
+                  </div>
+                  <div class="dropdown-col">
+                    <a class="dropdown-item" href="#">Drama</a>
+                    <a class="dropdown-item" href="#">Family</a>
+                    <a class="dropdown-item" href="#">Fantasy</a>
+                    <a class="dropdown-item" href="#">Romance</a>
+                    <a class="dropdown-item" href="#">Science Fiction</a>
+                    <a class="dropdown-item" href="#">War</a>
+                  </div>
+                </div>
+              </div>    
+              <!-- COLUMNS END-->
+           </li>
             <li class="nav-item">
               <a class="nav-link disabled" href="#">Disabled</a>
             </li>
@@ -40,11 +72,13 @@
             <!-- homePage -->
         </div>
 
-        <div class="page1">
+        <div class="page1"> 
             <!-- actors -->
         </div>
 
+        <!-- movies section  -->
         <div class="page2">
+          
             <!-- movies -->
         </div>
 
@@ -73,3 +107,5 @@
 </body>
 
 </html>
+
+
