rendering single actor page

--- a/index.html
+++ b/index.html
@@ -11,13 +11,12 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">MOVIES</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
@@ -25,6 +24,42 @@
         </li>
         <li class="nav-item  d-flex align-content-center justify-content-center" id='actors'>
           <a class="nav-link" href="#">Actors</a>
+        </li>
+        <li class="nav-item">
+          <!-- COLUMNS -->
+          <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              MOVIES
+            </button>
+            <div class="dropdown-menu dropdown-multicol2" aria-labelledby="dropdownMenuButton">
+              <div class="dropdown-col">
+                <a class="dropdown-item" href="#">Action</a>
+                <a class="dropdown-item" href="#">Adventure</a>
+                <a class="dropdown-item" href="#">Animation</a>
+                <a class="dropdown-item" href="#">History</a>
+                <a class="dropdown-item" href="#">Horror</a>
+                <a class="dropdown-item" href="#">TV Movie</a>
+              </div>
+              <div class="dropdown-col">
+                <a class="dropdown-item" href="#">Comedy</a>
+                <a class="dropdown-item" href="#">Crime</a>
+                <a class="dropdown-item" href="#">Documentary</a>
+                <a class="dropdown-item" href="#">Music</a>
+                <a class="dropdown-item" href="#">Mystery</a>
+                <a class="dropdown-item" href="#">Thriller</a>
+              </div>
+              <div class="dropdown-col">
+                <a class="dropdown-item" href="#">Drama</a>
+                <a class="dropdown-item" href="#">Family</a>
+                <a class="dropdown-item" href="#">Fantasy</a>
+                <a class="dropdown-item" href="#">Romance</a>
+                <a class="dropdown-item" href="#">Science Fiction</a>
+                <a class="dropdown-item" href="#">War</a>
+              </div>
+            </div>
+          </div>
+          <!-- COLUMNS END-->
         </li>
         <li class="nav-item  d-flex align-content-center justify-content-center" id='actors'>
           <a class="nav-link" href="#" id="aboutUs">About Us</a>
@@ -36,32 +71,51 @@
       </form>
     </div>
   </nav>
-
   <div class="container">
     <div class="row actorsRow">
     </div>
   </div>
-  </div>
-
-  <!-- <div class="container cardsContainer d-flex justify-content-center">
-    <div class="row d-flex flex-wrap justify-content-center">
-      <div class="col">
-        <div class="card shadow-lg m-3" style="width: 15rem;">
-          <img class="card-img-top" src="./imgg.jpeg" alt="Card image cap">
-          <p class="text-dark mb-0 pl-2 ">
-            <a><strong>My name</strong></a>
-          </p>
-          <p class="card-text pl-2 text-muted">Some quick example text to build on...</p>
-        </div>
-      </div>
-  </div> -->
-      
-
-
 
   <footer>
-
   </footer>
+  <!-- <div class="container d-flex flex-column">
+    <div class="row">
+      <div class="col-md-4">
+        <img src="./img.jpeg">
+      </div>
+      <div class="col-6 col-md-8">
+        <strong>
+          <h1>my name</h1>
+        </strong>
+        <br>
+        <strong>
+          <h5>Biography</h5>
+        </strong>
+        <p class="w-100">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea debitis non culpa, minima nulla
+          quae aliquid
+          saepe perspiciatis cumque quia, expedita modi unde libero natus autem? Est ullam cupiditate officia!</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-4">
+        <strong>
+          <h4>Personal Info</h4>
+        </strong>
+        <h5 class="actorH5">lorem</h5>
+        <p>hight</p>
+
+        <h5>lorem</h5>
+        <p>hight</p>
+
+        <h5>lorem</h5>
+        <p>hight</p>
+      </div>
+      <div class="col-8">
+       i am a slider
+      </div>
+    </div>
+  </div> -->
+
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
