--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg">
     <a class="navbar-brand" href="#">MOVIES</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -75,15 +75,13 @@
     </div>
   </nav>
   <div class="container">
-    <div class="row actorsRow">
-    </div>
   </div>
-
   <footer>
+    <div class="footerContainer">
+              <div class="copyright-text">
+                <p>© 2022 ourMovies All rights reserved. Created by Mostafa & Mayce</p>
+      </div>
   </footer>
-
-  
-
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
     crossorigin="anonymous"></script>
