adding credits to single actor page

--- a/index.html
+++ b/index.html
@@ -78,41 +78,16 @@
 
   <footer>
   </footer>
-  <!-- <div class="container d-flex flex-column">
-    <div class="row">
-      <div class="col-md-4">
-        <img src="./img.jpeg">
+  <!-- <div class="row flex-row justify-content-center align-content-center">
+      <div class="card" style="width: 10rem;height:10rem">
+        <img src="./images/img.jpeg" class="card-img-top" style="width: 10rem;height:10rem" alt="...">
+        <p class="card-text text-dark d-flex justify-content-center p-0 m-0">movies name</p>
       </div>
-      <div class="col-6 col-md-8">
-        <strong>
-          <h1>my name</h1>
-        </strong>
-        <br>
-        <strong>
-          <h5>Biography</h5>
-        </strong>
-        <p class="w-100">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea debitis non culpa, minima nulla
-          quae aliquid
-          saepe perspiciatis cumque quia, expedita modi unde libero natus autem? Est ullam cupiditate officia!</p>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-4">
-        <strong>
-          <h4>Personal Info</h4>
-        </strong>
-        <h5 class="actorH5">lorem</h5>
-        <p>hight</p>
-
-        <h5>lorem</h5>
-        <p>hight</p>
-
-        <h5>lorem</h5>
-        <p>hight</p>
-      </div>
-      <div class="col-8">
-       i am a slider
-      </div>
+      <div class="col">
+        <div class="card" style="width: 10rem;height:10rem">
+          <img src="./images/img.jpeg" class="card-img-top" style="width: 10rem;height:10rem" alt="...">
+          <p class="card-text text-dark d-flex justify-content-center p-0 m-0">movies name</p>
+        </div>
     </div>
   </div> -->
 
