adding knownfor: div

--- a/index.html
+++ b/index.html
@@ -78,18 +78,9 @@
 
   <footer>
   </footer>
-  <!-- <div class="row flex-row justify-content-center align-content-center">
-      <div class="card" style="width: 10rem;height:10rem">
-        <img src="./images/img.jpeg" class="card-img-top" style="width: 10rem;height:10rem" alt="...">
-        <p class="card-text text-dark d-flex justify-content-center p-0 m-0">movies name</p>
-      </div>
-      <div class="col">
-        <div class="card" style="width: 10rem;height:10rem">
-          <img src="./images/img.jpeg" class="card-img-top" style="width: 10rem;height:10rem" alt="...">
-          <p class="card-text text-dark d-flex justify-content-center p-0 m-0">movies name</p>
-        </div>
-    </div>
-  </div> -->
+  <div class="col justify-content-center align-content-center">
+    
+  </div>
 
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
