singleActor page is working here

--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
       </form>
     </div>
   </nav>
+  <div class="container">
+    <div class="row actorsRow">
+    </div>
+  </div>
 
   <footer>
   </footer>
